# mealie

./: .pre-commit-config.yaml  Taskfile.yml  pyproject.toml
.devcontainer/: Dockerfile
.github/: pull_request_template.md
.github/workflows/: auto-merge-l10n.yml
dev/code-generation/: gen_ts_locales.py
docker/: Dockerfile  healthcheck.sh
docs/: mkdocs.yml
docs/docs/documentation/getting-started/: api-usage.md  features.md
frontend/: nuxt.config.ts  package.json
frontend/components/Domain/Cookbook/: CookbookPage.vue
frontend/components/Domain/Group/: GroupDataPage.vue
frontend/components/Domain/Recipe/: RecipeCard.vue  RecipeList.vue  (+12 more)
frontend/components/Layout/: DefaultLayout.vue
frontend/components/global/: AdvancedOnly.vue  AutoForm.vue  CrudTable.vue
frontend/composables/: use-group-recipe-actions.ts  use-logged-in-state.ts  use-validators.ts
frontend/composables/forms/: use-field-types.ts
frontend/composables/partials/: use-actions-factory.ts
frontend/composables/recipe-page/: shared-state.ts
frontend/composables/use-locales/: available-locales.ts
frontend/composables/use-setup/: common-settings-form.ts
frontend/composables/use-users/: user-form.ts  user-ratings.ts
frontend/lang/messages/: af-ZA.json  ar-SA.json  bg-BG.json  ca-ES.json  cs-CZ.json  da-DK.json  de-DE.json  el-GR.json  en-GB.json  en-US.json  es-ES.json  et-EE.json  fi-FI.json  fr-BE.json  fr-CA.json  fr-FR.json  gl-ES.json  he-IL.json  hr-HR.json  hu-HU.json  is-IS.json  it-IT.json  ja-JP.json  ko-KR.json  lt-LT.json  lv-LV.json  nl-NL.json  no-NO.json  pl-PL.json  pt-BR.json  pt-PT.json  ro-RO.json  ru-RU.json  sk-SK.json  sl-SI.json  sr-SP.json  sv-SE.json  tr-TR.json  uk-UA.json  vi-VN.json  (+2 more)
frontend/layouts/: error.vue
frontend/lib/validators/: inputs.ts
frontend/pages/: index.vue  login.vue
frontend/pages/admin/: backups.vue  setup.vue
frontend/pages/household/: members.vue
frontend/pages/shopping-lists/: [id].vue  index.vue
frontend/types/: auto-forms.ts
mealie/: app.py
mealie/alembic/versions/: 2026-02-21-17.59.01_a39c7f1826e3_add_unit_standardization_fields.py
mealie/core/: exceptions.py
mealie/core/settings/: settings.py
mealie/lang/: locale_config.py
mealie/lang/messages/: af-ZA.json  ar-SA.json  bg-BG.json  ca-ES.json  cs-CZ.json  da-DK.json  de-DE.json  el-GR.json  en-US.json  es-ES.json  et-EE.json  fi-FI.json  fr-BE.json  fr-CA.json  fr-FR.json  gl-ES.json  he-IL.json  hr-HR.json  hu-HU.json  is-IS.json  it-IT.json  ja-JP.json  ko-KR.json  lt-LT.json  lv-LV.json  nl-NL.json  no-NO.json  pl-PL.json  pt-BR.json  pt-PT.json  ro-RO.json  ru-RU.json  sk-SK.json  sl-SI.json  sr-SP.json  sv-SE.json  tr-TR.json  uk-UA.json  vi-VN.json  zh-CN.json  (+1 more)
mealie/repos/: repository_recipes.py  repository_units.py
mealie/repos/seed/: _abstract_seeder.py  seeders.py
mealie/routes/admin/: admin_about.py  admin_debug.py
mealie/routes/app/: app_about.py
mealie/routes/parser/: ingredient_parser.py
mealie/schema/admin/: about.py
mealie/schema/recipe/: __init__.py  recipe_ingredient.py  recipe_tool.py
mealie/services/backups_v2/: backup_v2.py
mealie/services/household_services/: shopping_lists.py
mealie/services/openai/: openai.py
mealie/services/parser_services/: _base.py  ingredient_parser.py
mealie/services/recipe/: recipe_service.py
mealie/services/scraper/: recipe_scraper.py  scraper_strategies.py
tests/data/: __init__.py
tests/integration_tests/user_group_tests/: test_group_seeder.py
tests/integration_tests/user_household_tests/: test_group_shopping_list_items.py
tests/integration_tests/user_recipe_tests/: test_recipe_create_from_video.py  test_recipe_crud.py
tests/unit_tests/: test_config.py
tests/unit_tests/ingredient_parser/: test_unit_utils.py
tests/unit_tests/repository_tests/: test_recipe_repository.py  test_unit_repository.py
tests/unit_tests/services_tests/: test_openai_service.py
(+89 files in other folders)
